@@ -6,6 +6,7 @@ NEWS
 - 1.6.1 -
 
   * Add build date to show-version
+  * Added options to chown/chmod the socket and to create the socket before chroot() (fixes #1906)
 
 - 1.6.0 - 2009-02-28
 
